--- a/Rapport_ADD/Rapport_ADD_LEO-GABET.tex
+++ b/Rapport_ADD/Rapport_ADD_LEO-GABET.tex
@@ -175,9 +175,9 @@
   \newcounter{nbaut}
   \setcounter{nbaut}{9} % Nombre d'auteurs
   \author{Léo GABET}
-      \date{03 janvier 2024}
+      \date{07 janvier 2024}
 
- \resume{Dans le cadre de ce projet d'analyse de données, une étude sur les accidents de vélo en France sera prévue. L'analyse se concentre sur la compréhension des schémas sous-jacents à ces incidents, avec l'objectif d'identifier des tendances significatives pour informer les initiatives de sécurité routière et améliorer la sécurité des cyclistes.}
+ \resume{Dans le cadre de ce projet d'analyse de données, une étude sur les accidents de vélo en France sera effectué. L'analyse se concentre sur la compréhension des schémas sous-jacents à ces incidents, avec l'objectif d'identifier des tendances significatives pour informer les initiatives de sécurité routière et améliorer la sécurité des cyclistes.}
  \keywords{ACP/AFC/ACM.}
 
  \coefficient{50 \%}
@@ -187,7 +187,7 @@
 %\email{\href{mailto:leo.gabet@etudiant.univ-reims.fr}{\nolinkurl{leo.gabet@etudiant.univ-reims.fr}}}
 \logouniv{logo_URCA.pdf}
 \logoufr{logoSEN.pdf}
-\date{03 janvier 2024}
+\date{07 janvier 2024}
 \diplome{M2 SEP}
 \anac{2023-2024}
 \module{SEP0931}
@@ -257,7 +257,7 @@
 % \pagebreak
 % 
 % % \begin{abstract}
-% Dans le cadre de ce projet d'analyse de données, une étude sur les accidents de vélo en France sera prévue. L'analyse se concentre sur la compréhension des schémas sous-jacents à ces incidents, avec l'objectif d'identifier des tendances significatives pour informer les initiatives de sécurité routière et améliorer la sécurité des cyclistes.
+% Dans le cadre de ce projet d'analyse de données, une étude sur les accidents de vélo en France sera effectué. L'analyse se concentre sur la compréhension des schémas sous-jacents à ces incidents, avec l'objectif d'identifier des tendances significatives pour informer les initiatives de sécurité routière et améliorer la sécurité des cyclistes.
 % \end{abstract}
 % 
 
