--- a/Rapport_ADD/Rapport_ADD_LEO-GABET.tex
+++ b/Rapport_ADD/Rapport_ADD_LEO-GABET.tex
@@ -175,7 +175,7 @@
   \newcounter{nbaut}
   \setcounter{nbaut}{9} % Nombre d'auteurs
   \author{Léo GABET}
-      \date{07 janvier 2024}
+      \date{26 janvier 2024}
 
  \resume{Dans le cadre de ce projet d'analyse de données, une étude sur les accidents de vélo en France sera effectué. L'analyse se concentre sur la compréhension des schémas sous-jacents à ces incidents, avec l'objectif d'identifier des tendances significatives pour informer les initiatives de sécurité routière et améliorer la sécurité des cyclistes.}
  \keywords{ACP/AFC/ACM.}
@@ -187,7 +187,7 @@
 %\email{\href{mailto:leo.gabet@etudiant.univ-reims.fr}{\nolinkurl{leo.gabet@etudiant.univ-reims.fr}}}
 \logouniv{logo_URCA.pdf}
 \logoufr{logoSEN.pdf}
-\date{07 janvier 2024}
+\date{26 janvier 2024}
 \diplome{M2 SEP}
 \anac{2023-2024}
 \module{SEP0931}
@@ -480,7 +480,7 @@ Les bases utilisés après nettoyage sont :
 
 \begin{figure}
 \centering
-\includegraphics{../VAR.png}
+\includegraphics{images/VAR.png}
 \caption{Nature des variables exploités de nos bases / Source : Léo GABET Excel}
 \end{figure}
 
@@ -502,7 +502,7 @@ On constate une diminution des cas ``blessé léger / Indemne'' et une augmentat
 
 \begin{figure}
 \centering
-\includegraphics{../VELO.png}
+\includegraphics{images/VELO.png}
 \caption{Plan aménagement pistes cyclables Paris / Source : \url{https://www.pistes-cyclables.com/2019/06/plan-des-pistes-cyclables-de-paris-2020/}}
 \end{figure}
 
